fix(banner): fix bottom whitespace overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 $topbar-height: 42px;
 $date-height: 450px;
 
+section {
+  height: 100vh;
+  position: relative;
+}
+
 .wedding {
   height: 100%;
 
@@ -40,13 +45,14 @@ $date-height: 450px;
     color: #FFFFFF;
     position: absolute;
     width: 100%;
+    height: 100vh;
 
     &-date-container {
       position: relative;
       text-align: center;
       // top: calc(100vh - $date-height - 41px);
       z-index: 10;
-      height: 100vh;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
@@ -66,22 +72,24 @@ $date-height: 450px;
 
     &-layer {
       background-color: #000000;
-      bottom: 100vh;
-      height: 100vh;
+      height: 100%;
       opacity: .75;
-      position: relative;
+      position: absolute;
+      top: 0;
+      width: 100%;
       z-index: 20;
     }
 
     &-contents {
       align-items: center;
-      bottom: 200vh;
       display: flex;
       flex-flow: column;
-      height: 100vh;
+      height: 100%;
       justify-content: center;
-      position: relative;
+      position: absolute;
       text-align: center;
+      top: 0;
+      width: 100%;
       z-index: 30;
 
       & > h4 {
